// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #cancelLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 34990,
}
`;

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 259329,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 354776,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 162944,
}
`;
